# utils_zp

./: .gitignore  LICENSE  README.md  TODO.md  __init__.py  attr_dic.py  exception_utils.py  exp_args.py  file_utils.py  func_utils.py  plt_utils.py  pyproject.toml  requirements.txt  setup.py  sshTransmitor_utils.py
codebase/: aliyun_oss.py
codebase/Conda/: conda_env_export.sh
codebase/Git/: clear_all_commits.sh  git_branch.sh  git_commit_standards.txt  git_config.sh  git_dir.sh  git_tag.sh
codebase/Linux/: linux.sh  ssh.sh
codebase/Windows/: switch_disk_u_plate.cmd
codebase/docker/: docker_cmds.sh
codebase/docker/sample/: dev.sh  docker-compose.yml  dockerfile  dockerfile.add  (+2 more)
codebase/multitasking/: -cal_time.py  -multiprocessing_improvement.py
codebase/tmux/: cmds.sh
inbox/: ~~move_and_link.sh  ~~rm_link_and_move.sh
shell/: bashrc_zp.sh  watch_process.sh
src/: _makefile_tests.py  _test_utils_time.py
src/Conda/: conda_base_cmd.sh  conda_env_export.sh
src/Git/: git_branch.sh  git_rebase.sh  git_submodule.sh
src/Linux/: bashrc_zp.sh  huggingface_cli.sh  linux.sh  run_common.sh  run_with_port.sh  set_bashrc.sh
src/Tools/: cut_pdf.py  edit_pdf.py  mv2gif.py
src/_project_script_zp/: __init__.py  gitupdate.py  updatebashrc.py
src/_utils_zp_v1/: __init__.py
src/_zp_script/: __init__.py  _update_pyproject_toml.py  _utils.py  bashrc_zp.sh  bg_python.py  git_update.py  git_update_sample.py  readme.md  show_bashrc.py  update_bashrc.py
src/docker/: clear_docker.sh  dev.sh  docker-compose.yml  dockerfile  dockerfile.add  dockerfile.all  dockerfile.env  env_docker.sh
src/multitasking/: __init__.py  _multiprocessing.py  threading_.py
src/script/: __init__.py  bashrc_zp.sh  bg_python.py  git_update.py  git_update_sample.py  killzp.py  pszp.py  test_cmd.py  update_bashrc.py
src/shell/: common_cmd.sh  retry_until_success.sh  run.sh  set_bashrc.sh  set_bashrc_script.py
src/utils/: __init__.py  exp_args.py  gpu_utils.py  logger_utils.py  model_utils.py  script_utils.py
src/utils_zp/: __init__.py  __utils.py  attr_dic.py  base_decorator.py  common_import.py  exp_args.py  file_utils.py  func_utils.py  gpu_utils.py  path_utils.py  plt_utils.py  postprocess_generation_res.py  set_process_title.py  time_utils.py  tmp.py
(+129 files in other folders)
