[project]
name = "utils_zp"
version = "3.0.0"
description = "utilities of zp"
# requires-python = ">=3.8"
dependencies = [
    "tqdm",
]
authors = [
    { name="Zhipang Wang", email="zhipangwang@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    # "Operating System :: OS Independent",
]

# -----
[project.scripts]
zp = "script:zp_cmd"
bgpy = "script:bgpy_cmd"
gitupdate = "script:gitupdate_cmd"
killzp = "script:killzp_cmd"
pszp = "script:pszp_cmd"
update_bashrc = "script:update_bashrc_cmd"
zp_test = "script:zp_test_cmd"
# -----


# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"