[project]
name = "utils_zp"
version = "3.0.0"
description = "utilities of zp"
# requires-python = ">=3.8"
dependencies = [
    "tqdm",
    "gpustat",
]
authors = [
    { name="Zhipang Wang", email="zhipangwang@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    # "Operating System :: OS Independent",
]

# -----
[project.scripts]
zp = "_zp_script:zp_cmd"
bgpy = "_zp_script:bgpy_cmd"
gitupdate = "_zp_script:gitupdate_cmd"
killzp = "_zp_script:killzp_cmd"
pszp = "_zp_script:pszp_cmd"
update_bashrc = "_zp_script:update_bashrc_cmd"
zp_test = "_zp_script:zp_test_cmd"
# -----


# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"