[project]
name = "utils_zp"
version = "3.0.0"
description = "utilities of zp"
# requires-python = ">=3.8"
dependencies = [
    "tqdm",
    "gpustat",
]
authors = [
    { name="Zhipang Wang", email="zhipangwang@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    # "Operating System :: OS Independent",
]

# -----
[project.scripts]
zp = "_project_script_zp:zp_cmd"
gitupdate = "_project_script_zp:gitupdate_cmd"
updatebashrc = "_project_script_zp:updatebashrc_cmd"
# -----


# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"